# MPSnake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: SDL.hxx  actual_sdl.cxx  actual_sdl.hxx  application.cxx  application.hxx  application_tests.cxx  default_colors.hxx  game_object.cxx  game_object.hxx  goal.cxx  goal.hxx  goal_tests.cxx  main.cxx  mock_sdl.cxx  mock_sdl.hxx  native.cxx  native.hxx  sdl.hxx  sdl_helpers.hxx  surface.cxx  surface.hxx  surface_tests.cxx  window.cxx  window.hxx  window_tests.cxx
cmake/: notes.txt
